# sync-stereo-delay

./: CMakeLists.txt  README.md  Setup.bat
gui/: .uidesc
src/: controller.cpp  controller.h  entry.cpp  ids.h  processor.cpp  processor.h
src/gui/: .uidesc
